--- a/text.html
+++ b/text.html
@@ -2,10 +2,10 @@
  <html lang="en">
  <head>      
      <meta charset="utf-8">
-     <title>services</title>    
+     <title>services</title>       
      <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.12.0/css/all.css">  
      <link rel="stylesheet" href="css/jquery.fancybox.min.css">      
-     <link rel="stylesheet" href="css/slick.css"/>     
+     <link rel="stylesheet" href="css/slick.css"/>
      <link rel="stylesheet" href="style.css">  
  </head>
  <body>
@@ -18,7 +18,7 @@
               <ul>
                  <li><a href="#">Home</a></li>
                  <li><a href="#">About</a></li>
-                 <li class="sport"><a href="#">Services</a></li>
+                 <li class="sport"><a href="https://auto.ru/autoservice/">Services</a></li>
                  <li><a href="#">Portfolio</a></li>
                  <li><a href="#">Shop</a></li>
                  <li><a href="#">Contact</a></li>
@@ -40,7 +40,7 @@
        <div class="about__title">
          <h1>A little about us</h1>
        </div>
-    <div class="slider__inner"></div>
+    <div class="about__line"></div>
       <div class="about__tezis">
        <div class="about__tex">      
           <p>We are  a company based in india with the   motto    “Digitalally
@@ -54,15 +54,16 @@
            motto “Digitalally Designed India”.  We are  a company  based in
            India with the motto “Digitalally Designed India”.  We are  a
            company based in india with the motto “Digitalally   Designed India”.</p>      
-        </div>
-      </div>         
+          </div>
+        </div>      
     <div class="about__btn">
-      <a data-fancybox data-src="#modal" href="javascript:;"clsss="about__btn" href="#">READ MORE DETAILS</a>    </div> 
-         </div>  
-    <div id="modal">
-        <h2>Hello!</h2>
-        <p>You are awesome!</p>
-    </div>       
+           <a data-fancybox data-src="#modal" href="javascript:;"clsss="about__btn" href="#">MORE DETAILS</a>   
+              <div id="modal">
+                  <h2>Hello!</h2>
+                  <p>You are awesome!</p>
+              </div>                    
+            </div>          
+         </div>         
   </section>
 
   <section class="servises">
@@ -85,9 +86,13 @@
            development service We provide the best world
            class web development service</p>
     <div class="detalis__btn">               
-           <a clsss="detalis__btn" href="#">MORE DETAILS</a>
-        </div>
-       </div>
+           <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
+              <div id="modal">
+                  <h2>Hello!</h2>
+                  <p>You are awesome!</p>
+              </div>
+           </div>
+        </div>         
     <div class="detalis__server">             
         <img src="img/icon-2.png" alt=""> 
           <h1>Web DEVELOPMENT</h1>   
@@ -95,9 +100,13 @@
           development service We provide the best world
           class web development service</p>
     <div class="detalis__btn">               
-          <a clsss="detalis__btn" href="#">MORE DETAILS</a>
-        </div>
-      </div>       
+          <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
+             <div id="modal">
+                  <h2>Hello!</h2>
+                  <p>You are awesome!</p>
+                </div>
+             </div>
+          </div>       
     <div class="detalis__server"> 
         <img src="img/icon-3.png" alt="">
           <h1>Web DEVELOPMENT</h1>       
@@ -105,10 +114,14 @@
           development service We provide the best world
           class web development service</p>
     <div class="detalis__btn">               
-          <a clsss="detalis__btn" href="#">MORE DETAILS</a>
-          </div>
-        </div>   
-      </div>
+          <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
+             <div id="modal">
+                  <h2>Hello!</h2>
+                  <p>You are awesome!</p>
+                </div>
+             </div>
+          </div>   
+       </div>
     <div class="invisions__pro"> 
          <div class="invisions__left">
           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
@@ -116,8 +129,8 @@
     <div class="invisions__right">
           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
           </div>
-         </div>       
-        </div>
+        </div>       
+      </div>
    </section>
    
    <section class="Feedback">
@@ -161,34 +174,34 @@
            <img src="img/person 3.png" alt="person">        
            <span class="wrrap-3">01</span>
            <span class="wrraper-3">Imran Khan CEO, Vesso</span>
-        </div>
+         </div>
        </div>    
      </div>     
    </section>
 
-   <section class="clients">
+   <section class="slider">
     <div class=container>
-       <div class="clients__visions">
+       <div class="slider__inner">
           <h1>Clients</h1>
        </div>
-    <div class="clients__left"></div>
-       <div class="clients__right"></div>   
-    <div class="clients__center">
-       <div class="clients__chevron-left">
+    <div class="slider__left"></div>
+       <div class="slider__right"></div>   
+    <div class="slider__center">
+       <div class="slider__chevron-left">
           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
       </div>
-    <div class="clients__chevron-right">
+    <div class="slider__chevron-right">
           <a href="#"target="_blank" rel="nofollow"><i class="fal  fa-chevron-right"></i></a>         
         </div>
       </div>   
-    <div class="clients__icons">
-       <div class="clients__icon">        
+    <div class="slider__icons">
+       <div class="slider__icon">        
            <img src="img/adobe-logo.png" alt="adobe">
            <img src="img/guideline-based.png" alt="guideline">
            <img src="img/infosys-logo.png" alt="infosys">
            <img src="img/invision.png" alt="invision"> 
         </div>
-    <div class="clients__icon">         
+    <div class="slider__icon">         
            <img src="img/cisco-logo.png" alt="cisco"> 
            <img src="img/behance.png" alt="behance">
            <img src="img/canva-logo.png" alt="canva">
@@ -241,10 +254,10 @@
     <div class="plans"> 
         <div class="plans__email">      
            <a clsss="email" href="#">Your email</a>
-         </div>
+          </div>
     <div class="plans__Subscribe">      
            <a clsss="Subscribe" href="#">Subscribe</a>
-         </div>     
+          </div>     
         </div>
        <div class="social__google">          
            <a href="#"target="_blank" rel="nofollow"><i class="fab fa-facebook-f"></i>
@@ -259,9 +272,9 @@
   
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
      <script scr="js/jquery.fancybox.min.js"></script>    
-     <script scr="js/main.js"></script>       
+     <script scr="js/slick.min.js"></script>
      <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-
+   
     
     </body>   
     </html>
