--- a/text.html
+++ b/text.html
@@ -1,19 +1,19 @@
  <!DOCTYPE html>
  <html lang="en">
  <head>
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width">  
      <title>services</title>       
      <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.12.0/css/all.css">  
      <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-     <link rel="stylesheet" href="slick/slick.css">
-     <link rel="stylesheet" href="slick/slick-theme.css"> 
-     <link rel="stylesheet" href="style.css">
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width">     
+     <link rel="stylesheet" href="css/normalize.css">
+     <link rel="stylesheet" href="css/slick.css">     
+     <link rel="stylesheet" href="style.css">       
  </head>
  <body>
 
  <header class="header">
-  <div class="container">
+   <div class="container">
      <div class="header__logo"><img src="img/logo.png"></div>
         <div class="header__item">
            <nav class="menu">
@@ -34,38 +34,43 @@
         <a href="#"target="_blank" rel="nofollow"><i class="fab fa-twitter"></i></a>
         <a href="#"target="_blank" rel="nofollow"><i class="fab fa-google-plus-g"></i></a>
      </div>
-   <div class="gorizont__liner"></div>
+   <div class="gorizont__liner"></div> 
    </header>
 
    <section class="about">
-    <div class="container">    
-       <div class="about__title">
-         <h1>A little about us</h1>
-       </div>       
-    <div class="about__line"></div>
-      <div class="about__tezis">
-       <div class="about__tex">      
-          <p>We are  a company based in india with the   motto    “Digitalally
-           Designed India”. We are  a company based in india with the   motto
-           “Digitalally  Designed India”. We are  a company based in  india
-           with the motto “Digitalally  Designed India”.</p>       
-       </div>
-    <div class="about__tex">     
-           <p>We are  a company based in india with the motto  “Digitalally
-           Designed India”. We are  a company based in india with the
-           motto “Digitalally Designed India”.  We are  a company  based in
-           India with the motto “Digitalally Designed India”.  We are  a
-           company based in india with the motto “Digitalally   Designed India”.</p>      
-          </div>
-        </div>      
-    <div class="about__btn">
-           <a data-fancybox data-src="#modal" href="javascript:;"clsss="about__btn" href="#">MORE DETAILS</a>   
+     <div class="container">
+       <div class="about__column">    
+         <div class="about__icon"> 
+           <img src="img/about.jpg" alt="about">
+        </div>              
+     <div class="about__title">
+           <h1>A little about us</h1>
+         <div class="about__line"></div>   
+     <div class="about__wrrap">   
+     <div class="about__text">      
+            <p>We are  a company based in india with the   motto    “Digitalally
+             Designed India”. We are  a company based in india with the   motto
+             “Digitalally  Designed India”. We are  a company based in  india
+             with the motto “Digitalally  Designed India”.</p>       
+         </div>
+      <div class="about__text">     
+             <p>We are  a company based in india with the motto  “Digitalally
+             Designed India”. We are  a company based in india with the
+             motto “Digitalally Designed India”.  We are  a company  based in
+             India with the motto “Digitalally Designed India”.  We are  a
+             company based in india with the motto “Digitalally   Designed India”.</p>
+          </div>               
+        </div>            
+      <div class="about__btn">
+           <a data-fancybox data-src="#modal" href="javascript:;"clsss="about__btn" href="#">MORE DETAILS</a>
+          </div>    
               <div id="modal">
                   <h2>Hello!</h2>
                   <p>You are awesome!</p>
-              </div>                    
-            </div>          
-         </div>         
+              </div>                     
+            </div>
+          </div>
+        </div>           
   </section>
 
   <section class="servises">
@@ -87,14 +92,14 @@
           <p>We provide the best world class web 
            development service We provide the best world
            class web development service</p>
-    <div class="provide__btn">               
+    <div class="provide__btn">                   
            <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
+          </div> 
               <div id="modal">
                   <h2>Hello!</h2>
                   <p>You are awesome!</p>
-              </div>
-           </div>
-        </div>         
+              </div>   
+          </div>    
     <div class="provide__server">             
         <img src="img/icon-2.png" alt=""> 
           <h1>Web DEVELOPMENT</h1>   
@@ -102,12 +107,12 @@
           development service We provide the best world
           class web development service</p>
     <div class="provide__btn">               
-          <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
-             <div id="modal">
+           <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
+         </div> 
+              <div id="modal">
                   <h2>Hello!</h2>
                   <p>You are awesome!</p>
-                </div>
-             </div>
+              </div>             
           </div>       
     <div class="provide__server"> 
         <img src="img/icon-3.png" alt="">
@@ -116,20 +121,20 @@
           development service We provide the best world
           class web development service</p>
     <div class="provide__btn">               
-          <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
-             <div id="modal">
+           <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
+         </div> 
+              <div id="modal">
                   <h2>Hello!</h2>
                   <p>You are awesome!</p>
-                </div>
-             </div>
-          </div>   
-       </div>
+              </div>            
+           </div>   
+        </div>
     <div class="provide__pro"> 
          <div class="provide__left">
-          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
-       </div>     
+            <i class="fal fa-chevron-left"></i></a>
+        </div>     
     <div class="provide__right">
-          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
+            <i class="fal fa-chevron-right"></i></a>
           </div>
         </div>       
       </div>
@@ -156,10 +161,10 @@
     <div class="portfolio__line"></div>
            <b class="portfolio__nomer">1/10</b>
        <div class="portfolio__left">
-           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
+           <i class="fal fa-chevron-left"></i></a>
          </div>   
        <div class="portfolio__right">
-           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
+           <i class="fal fa-chevron-right"></i></a>
          </div>             
     <div class="portfolio__pro">
         <div class="portfolio__inter">
@@ -181,35 +186,26 @@
      </div>     
    </section>
 
-   <section class="clients">
+   <section class="sliders">
     <div class="container">
-       <div class="clients__inner">
+       <div class="slider__inner">
           <h1>Clients</h1>
        </div>
-    <div class="clients__left"></div>
-       <div class="clients__right"></div>   
-    <div class="clients__dod">
-       <div class="clients__next">
-          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
-       </div>
-    <div class="clients__prev">
-          <a href="#"target="_blank" rel="nofollow"><i class="fal  fa-chevron-right"></i></a>         
-       </div>
-      </div>
-                   
-    <div class="regular slick">    
+    <div class="slider__left"></div>
+       <div class="slider__right"></div>    
+    <div class="slider slick">
            <div><img src="img/adobe-logo.png" alt="adobe"></div> 
            <div><img src="img/guideline-based.png" alt="guideline"></div>
            <div><img src="img/infosys-logo.png" alt="infosys"></div>
-           <div><img src="img/invision.png" alt="invision"></div>
-        </div>    
-    <div class="regular">     
+           <div><img src="img/invision.png" alt="invision"></div>         
+      </div>   
+    <div class="slider__slick">                                                           
            <div><img src="img/cisco-logo.png" alt="cisco"></div>
            <div><img src="img/behance.png" alt="behance"></div> 
            <div><img src="img/canva-logo.png" alt="canva"></div>                    
-           <div><img src="img/instagram-logo.png" alt="instagram"></div>        
-        </div> 
-      </div>   
+           <div><img src="img/instagram-logo.png" alt="instagram"></div>               
+       </div>         
+     </div>      
    </section>
 
    <section class="quote">
@@ -270,14 +266,12 @@
          </div>
        </div>      
     </footer>
-   
+
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>          
      <script scr="js/jquery.fancybox.min.js"></script>    
-     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>   
-     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>    
-     <script src="slick/slick.js"></script>
-     <script src="slick/main.js"></script>
-
+     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>    
+     <script src="js/slick.min.js"></script>
+     <script src="js/main.js"></script>
     </body>               
    </html>
      
