--- a/text.html
+++ b/text.html
@@ -108,7 +108,7 @@
           class web development service</p>
     <div class="provide__btn">               
            <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
-         </div> 
+          </div> 
               <div id="modal">
                   <h2>Hello!</h2>
                   <p>You are awesome!</p>
@@ -122,7 +122,7 @@
           class web development service</p>
     <div class="provide__btn">               
            <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
-         </div> 
+          </div> 
               <div id="modal">
                   <h2>Hello!</h2>
                   <p>You are awesome!</p>
@@ -186,7 +186,7 @@
      </div>     
    </section>
 
-   <section class="sliders">
+   <section class="slides">
     <div class="container">
        <div class="slider__inner">
           <h1>Clients</h1>
@@ -272,7 +272,7 @@
      <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>    
      <script src="js/slick.min.js"></script>
      <script src="js/main.js"></script>
-    </body>               
+   </body>               
    </html>
      
     
