--- a/text.html
+++ b/text.html
@@ -159,7 +159,7 @@
           </p>            
         </div>
     <div class="portfolio__line"></div>
-           <b class="portfolio__nomer">1/10</b>
+           <span class="portfolio__nomer">1/10</span>
        <div class="portfolio__left">
            <i class="fal fa-chevron-left"></i></a>
          </div>   
