--- a/text.html
+++ b/text.html
@@ -20,7 +20,7 @@
               <ul>
                  <li><a href="#">Home</a></li>
                  <li><a href="#">About</a></li>
-                 <li class="sport"><a href="https://basicautoservices.com/">Services</a></li>
+                 <li><a href="https://basicautoservices.com/">Services</a></li>
                  <li><a href="#">Portfolio</a></li>
                  <li><a href="#">Shop</a></li>
                  <li><a href="#">Contact</a></li>
@@ -74,7 +74,7 @@
   </section>
 
   <section class="servises">
-    <div class=container>  
+    <div class="container">  
       <div class="servises__our">
          <h1>OUR SERVICES</h1>    
       </div>
@@ -83,16 +83,16 @@
      </div>
   </section>
 
-  <section class="provide">
-    <div class=container>
-      <div class="provide__info">
-    <div class="provide__server"> 
+  <section class="provaid">
+    <div class="container">
+      <div class="provaid__info">
+    <div class="provaid__server"> 
         <img src="img/icon-1.png" alt="">
           <h1>Web DEVELOPMENT</h1>       
           <p>We provide the best world class web 
            development service We provide the best world
            class web development service</p>
-    <div class="provide__btn">                   
+    <div class="provaid__btn">                   
            <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
           </div> 
               <div id="modal">
@@ -100,13 +100,13 @@
                   <p>You are awesome!</p>
               </div>   
           </div>    
-    <div class="provide__server">             
+    <div class="provaid__server">             
         <img src="img/icon-2.png" alt=""> 
           <h1>Web DEVELOPMENT</h1>   
           <p>We provide the best world class web 
           development service We provide the best world
           class web development service</p>
-    <div class="provide__btn">               
+    <div class="provaid__btn">               
            <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
           </div> 
               <div id="modal">
@@ -114,26 +114,26 @@
                   <p>You are awesome!</p>
               </div>             
           </div>       
-    <div class="provide__server"> 
+    <div class="provaid__server"> 
         <img src="img/icon-3.png" alt="">
           <h1>Web DEVELOPMENT</h1>       
           <p>We provide the best world class web 
           development service We provide the best world
           class web development service</p>
-    <div class="provide__btn">               
+    <div class="provaid__btn">               
            <a data-fancybox data-src="#modal" href="javascript:;"clsss="detalis__btn" href="#">MORE DETAILS</a>
           </div> 
               <div id="modal">
                   <h2>Hello!</h2>
                   <p>You are awesome!</p>
               </div>            
-           </div>   
+           </div>
         </div>
-    <div class="provide__pro"> 
-         <div class="provide__left">
+    <div class="provaid__pro"> 
+         <div class="provaid__left">
             <i class="fal fa-chevron-left"></i></a>
         </div>     
-    <div class="provide__right">
+    <div class="provaid__right">
             <i class="fal fa-chevron-right"></i></a>
           </div>
         </div>       
@@ -151,22 +151,22 @@
    </section>
    
    <section class="portfolio">
-      <div class="container">       
+      <div class="container">            
         <div class="portfolio__tex">
           <p>It was always a pleasure
             doing bussiness with them. 
              I love the quality of work.
-          </p>            
+          </p>           
         </div>
     <div class="portfolio__line"></div>
            <span class="portfolio__nomer">1/10</span>
        <div class="portfolio__left">
            <i class="fal fa-chevron-left"></i></a>
-         </div>   
+          </div>
        <div class="portfolio__right">
            <i class="fal fa-chevron-right"></i></a>
-         </div>             
-    <div class="portfolio__pro">
+       </div>             
+    <div class="portfolio__pro"> 
         <div class="portfolio__inter">
            <img src="img/person 1.png" alt="person">
            <span class="wrrap-1">01</span>
@@ -181,25 +181,25 @@
            <img src="img/person 3.png" alt="person">        
            <span class="wrrap-3">01</span>
            <span class="wrraper-3">Imran Khan CEO, Vesso</span>
-         </div>
+         </div>  
        </div>    
      </div>     
    </section>
 
-   <section class="slides">
+   <section class="slider__col">
     <div class="container">
        <div class="slider__inner">
           <h1>Clients</h1>
        </div>
     <div class="slider__left"></div>
        <div class="slider__right"></div>    
-    <div class="slider slick">
+    <div class="slider wrrap">
            <div><img src="img/adobe-logo.png" alt="adobe"></div> 
            <div><img src="img/guideline-based.png" alt="guideline"></div>
            <div><img src="img/infosys-logo.png" alt="infosys"></div>
            <div><img src="img/invision.png" alt="invision"></div>         
       </div>   
-    <div class="slider__slick">                                                           
+    <div class="slider wrrap">                                                           
            <div><img src="img/cisco-logo.png" alt="cisco"></div>
            <div><img src="img/behance.png" alt="behance"></div> 
            <div><img src="img/canva-logo.png" alt="canva"></div>                    
@@ -208,14 +208,14 @@
      </div>      
    </section>
 
-   <section class="quote">
-    <div class=container>
-      <div class="quote__exspress">
+   <section class="pages">
+    <div class="container">      
+      <div class="pages__exspress">
           <h1>Any Queries | Get a quote</h1> 
           <p>If you have any questions or queries regarding our service or pricing don’t worry
            Our experts will call you.</p>       
       </div>
-    <div class="quote__bridges">
+    <div class="pages__bridges">
           <p clscc="_bridges">Your name</p>
           <p clscc="_bridges">Your number</p>
           <p clscc="_bridges">Get a call</p>
@@ -224,23 +224,23 @@
    </section>
 
    <footer class="footer">
-    <div class=container>
-      <div class="plans__contakt">
-        <ul class="plans__dellet">
+    <div class="container">
+      <div class="contakt">
+        <ul class="contakt__dellet">
           <li class="dellet__first">Product</li>
           <li>Cost & Governanc</li>
           <li>Security & Complaince</li>
           <li>Product N</li>
           <li>Pricing & plans</li>
         </ul>
-      <ul class="plans__dellet">
-          <li class="dellet__first">LEARN</li>
+      <ul class="contakt__dellet">
+          <li>LEARN</li>
           <li>Articles</li>
           <li>Register a demo</li>
           <li>Webinars</li>
           <li>FAQs</li>
         </ul>
-      <ul class="plans__dellet">
+      <ul class="contakt__dellet">
           <li class="dellet__first">COMPANY</li>
           <li class="dellet__last">About</li>
           <li class="dellet__last">Careers</li>
@@ -248,15 +248,15 @@
           <li class="dellet__last">Contact</li>
          </ul>
        </div>
-    <div class="plans"> 
-        <div class="plans__email">      
+    <div class="contakt__center"> 
+        <div class="contakt__email">      
            <a clsss="email" href="#">Your email</a>
           </div>
-    <div class="plans__Subscribe">      
+    <div class="contakt__Subscribe">      
            <a clsss="Subscribe" href="#">Subscribe</a>
           </div>     
         </div>
-       <div class="plans__social">          
+       <div class="contakt__social">          
            <a href="#"target="_blank" rel="nofollow"><i class="fab fa-facebook-f"></i>
            <a href="#"target="_blank" rel="nofollow"><i class="fab fa-twitter"></i>
            <a href="#"target="_blank" rel="nofollow"><i class="fab fa-google-plus-g"></i>
