--- a/text.html
+++ b/text.html
@@ -62,7 +62,7 @@
           </div>               
         </div>            
       <div class="about__btn">
-           <a data-fancybox data-src="#modal" href="javascript:;"clsss="about__btn" href="#">MORE DETAILS</a>
+           <a data-fancybox data-src="#modal" href="javascript:;"clsss="about__btn" href="#">READ MORE DETAILS</a>
           </div>    
               <div id="modal">
                   <h2>Hello!</h2>
